# langchain-test

./: README.md  docker-compose.db.build.yaml  docker-compose.db.image.yaml  docker-compose.db.yaml  down-db.sh  problem-questions.txt  pyproject.toml  qa-eval-dataset.json  start-db.sh  test.json
data/: Chinook.db
governance_db/: Dockerfile  backup-database-instructions.txt  governance-db.sql  setup.sh
src/: Summarizers.py  agents.py  alembic.ini  check_content_type.py  check_google_doc_mime_type.py  content_analysis.py  delete_vectors.py  document_stores.py  embbeding_generation_1.py  embbeding_generation_2.py  embbeding_generation_3.py  evaluation_1.py  few-shot-examples-for-determining-proposal-links.md  google_doc_client.py  governance_etl.py  governance_firebase_etl.py  governance_gql_etl.py  markdown_embedding_generation_1.py  markdown_parsing_1.py  markdown_summary_1.py  models.py  parser_test.py  proposal_chatbot.py  proposal_detector.py  proposal_processor.py  qa_generation_1.py  question_answer_1.py  question_answer_10.py  question_answer_11.py  question_answer_2.py  question_answer_3.py  question_answer_4.py  question_answer_5.py  question_answer_6.py  question_answer_7.py  question_answer_8.py  question_answer_9.py  question_answer_prepopulate_history_12.py  questions_for_the_governance_agent.txt  readers.py  (+10 more)
src/chains/: __init__.py  concatenate_chain.py
src/chains/sentiment/: sentiment_chain.py  stuff_prompt.py
src/migrations/: env.py
src/migrations/versions/: 436f2cd0a9d4_initial_database.py  5f55afa034f3_update_reward_type.py  b624da80421b_initial_database.py  c4bc4f713252_initial_database.py  cb8471cda155_added_on_chain_properties.py  ec8a071f50a8_initial_database.py
tests/: test_proposal_detector.py
